# protheus_exporter

./: .gitignore  CHANGELOG.md  DATA-PERSISTENCE.md  DEPLOYMENT-OPTIONS.md  GRAFANA-DASHBOARD.md  LICENSE  METRICS-PERSISTENCE.md  MIGRATION-GUIDE.md  OFFLINE-INSTALL.md  README.md  RELEASE-2.0.md  UPDATE-GUIDE.md  WINDOWS-SERVICE.md  backup-data.ps1  check-persistence.ps1  download-dependencies.ps1  grafana-dashboard-protheus-metrics.json  install-service.ps1  manage-service.ps1  prometheus.yml  publish-docker.ps1  pyproject.toml  restore-data.ps1  start.ps1  start.sh  uninstall-service.ps1  update-service.ps1
.github/scripts/: extract_changelog.py
.github/workflows/: release.yml
configs/grafana/dashboards/: protheus-metrics.json
configs/prometheus/: README-ALERTS.md  alert_rules.yml  prometheus.yml
deployments/docker/: Dockerfile  docker-compose-hub.yml  docker-compose.yml
docker/: Dockerfile  docker-compose-hub.yml  docker-compose.yml
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/prometheus/: alert_rules.yml  prometheus.yml
docs/: deployment-guide.md  grafana-dashboard.md  release-process.md
protheus/: CHKEXEC.PRW
src/protheus/: zProtheusExporter.prw
src/python/: README.md  gunicorn.conf.py  metrics_persistence.py  protheus_exporter.py  protheus_exporter_service.py  requirements-windows.txt  service-config.ini
